--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="icon" type="image/png" href="/images/icon.png" />
-        <title>Title Goes Here</title>
+        <title>hello world MIMI</title>
 
         <!-- START Meta Information -->
         <meta name="description" content="" />
